--- a/html/about-service.html
+++ b/html/about-service.html
@@ -34,7 +34,7 @@
         <li> <a href="#">Регистрация</a></li>
         <li> <a href="#">Контакты</a></li>
       </ul>
-      <div class="btn-wc"><a class="btn white-border" href="#">Войти</a></div>
+      <div class="btn-wc"><a class="btn white-border element-btn" href="#" data-showEl="1">Войти</a></div>
     </div>
     <!-- mobile-menu-->
     <!-- popup-feedback-->
