--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,7 @@
         <li> <a href="#">Регистрация</a></li>
         <li> <a href="#">Контакты</a></li>
       </ul>
-      <div class="btn-wc"><a class="btn white-border" href="#">Войти</a></div>
+      <div class="btn-wc"><a class="btn white-border element-btn" href="#" data-showEl="1">Войти</a></div>
     </div>
     <!-- mobile-menu-->
     <!-- popup-feedback-->
@@ -106,7 +106,7 @@
             <p>Cras quis nulla commodo, aliquam lectus sed, blandit augue. Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta. Nam condimentum vitae ligula vel ornare.</p>
             <div class="btn-wc"><a class="btn white" href="#">Скачать в AppStore</a><a class="btn white" href="#">Скачать в PlayMarket</a></div>
           </div>
-          <div class="mobile-box"><img class="shadow" src="../images/shadow.png" data-parallaxify-range-x="-100" data-parallaxify-range-y="-20"><img src="../images/group.png"></div>
+          <div class="mobile-box"><img class="shadow" src="../images/shadow.png"><img src="../images/group.png"></div>
         </div>
       </div>
       <div class="section-text">
@@ -398,6 +398,7 @@
             <div class="address">г. Новосибирск<br>ул. Улица, д. 99, оф. 212</div>
             <div class="social"><a href="#"><img src="../images/social/i-b-2.svg"></a><a href="#"><img src="../images/social/f-b.svg"></a><a href="#"><img src="../images/social/v-b-2.svg"></a></div>
             <div class="btn-wrap"><a class="btn white shadow" href="#">Скачать в AppStore</a><a class="btn white shadow" href="#">Скачать в PlayMarket</a></div>
+            <div class="create">Дизайн, разработка сайта, разработка приложений: <a href="#">Expil International</a></div>
           </div>
         </div>
       </div>
