--- a/html/cabinet-event.html
+++ b/html/cabinet-event.html
@@ -34,7 +34,7 @@
         <li> <a href="#">Регистрация</a></li>
         <li> <a href="#">Контакты</a></li>
       </ul>
-      <div class="btn-wc"><a class="btn white-border" href="#">Войти</a></div>
+      <div class="btn-wc"><a class="btn white-border element-btn" href="#" data-showEl="1">Войти</a></div>
     </div>
     <!-- mobile-menu-->
     <header class="header-black">
@@ -56,11 +56,13 @@
                 <h3>ООО "Лабиринт"</h3>
               </div>
               <div class="pc-nav">
+                <div class="pa-info">
+                  <div class="name">login</div>
+                  <div class="mail"> name@name.ru</div>
+                </div>
                 <ul>
                   <li><a href="#">Редактировать профиль</a></li>
-                  <li><a href="#">Тариф</a></li>
                   <li><a href="#">Помощь</a></li>
-                  <li><a href="#">Пункт меню</a></li>
                   <li><a href="#">Выход</a></li>
                 </ul>
               </div>
