--- a/html/about-service.html
+++ b/html/about-service.html
@@ -167,10 +167,18 @@
         <h2>
            Какие дальнейшие варианты развития<br>платформы?</h2>
         <div class="question-tabs-cotnainer main-grid">
-          <div class="tc-item">Разработка функционала для проведение онлайн-мероприятий </div>
-          <div class="tc-item">Разработка функционала для проведение онлайн-мероприятий </div>
-          <div class="tc-item">Разработка функционала для проведение онлайн-мероприятий </div>
-          <div class="tc-item">Разработка функционала для проведение онлайн-мероприятий </div>
+          <div class="tc-item">
+            <div class="tc-inner">Разработка функционала для проведение онлайн-мероприятий </div>
+          </div>
+          <div class="tc-item">
+            <div class="tc-inner">Разработка функционала для проведение онлайн-мероприятий </div>
+          </div>
+          <div class="tc-item">
+            <div class="tc-inner">Разработка функционала для проведение онлайн-мероприятий </div>
+          </div>
+          <div class="tc-item">
+            <div class="tc-inner">Разработка функционала для проведение онлайн-мероприятий </div>
+          </div>
         </div>
         <div class="question-answer-container main-grid">
           <div class="qa-item main-grid">
