--- a/html/cabinet-news.html
+++ b/html/cabinet-news.html
@@ -80,7 +80,7 @@
         <div class="cabinet-body">
           <div class="cabinet-event"> 
             <h2>Заголовок размещенной новости в две или несколько строк</h2>
-            <div class="cabinet-event-container">
+            <div class="cabinet-event-container cabinet-news-container">
               <div class="ce-head">
                 <div class="ce-gallery">
                   <div class="gallery-main"><img src="../images/1.jpg"></div>
