--- a/html/index.html
+++ b/html/index.html
@@ -396,7 +396,7 @@
             <div class="phone">+7 (999) 999-99-99 </div>
             <div class="mail">info@domain.com</div>
             <div class="address">г. Новосибирск<br>ул. Улица, д. 99, оф. 212</div>
-            <div class="social"><a href="#"><img src="../images/social/i-b-2.svg"></a><a href="#"><img src="../images/social/f-b.svg"></a><a href="#"><img src="../images/social/v-b-2.svg"></a></div>
+            <div class="social"><a href="#"><i class="inst"></i></a><a href="#"><i class="fb"></i></a><a href="#"><i class="vk"></i></a></div>
             <div class="btn-wrap"><a class="btn white shadow" href="#">Скачать в AppStore</a><a class="btn white shadow" href="#">Скачать в PlayMarket</a></div>
             <div class="create">Дизайн, разработка сайта, разработка приложений: <a href="#">Expil International</a></div>
           </div>
