--- a/html/cabinet-main.html
+++ b/html/cabinet-main.html
@@ -12,6 +12,7 @@
       <script src="../js/jquery-3.3.1.min.js"></script>
       <script src="../js/jquery.parallaxify.js"></script>
       <script src="../js/jquery.mask.js"></script>
+      <script src="../js/clamp.js"></script>
       <script src="../js/slider.js"></script>
       <script src="../js/owl.carousel.js"></script>
       <script src="../js/control-style.js"></script>
@@ -87,7 +88,19 @@
                 <div class="data"> <i> </i>2 Июня 12:30</div>
                 <div class="category-name">Категория мероприятия</div>
               </div>
-              <h3>Заголовок размещенного мероприятия в несколько…</h3>
+              <h3>Заголовок размещенного мероприятия в несколько… мероприятия в несколько…</h3>
+              <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.</div>
+              <div class="ei-footer">
+                <div class="place"> <i></i>Новосибирск</div>
+                <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
+              </div>
+            </div>
+            <div class="event-item">
+              <div class="ei-head">
+                <div class="data"> <i> </i>2 Июня 12:30</div>
+                <div class="category-name">Категория мероприятия</div>
+              </div>
+              <h3>Заголовок размещенного </h3>
               <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.</div>
               <div class="ei-footer">
                 <div class="place"> <i></i>Новосибирск</div>
@@ -112,31 +125,7 @@
                 <div class="category-name">Категория мероприятия</div>
               </div>
               <h3>Заголовок размещенного мероприятия в несколько…</h3>
-              <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.</div>
-              <div class="ei-footer">
-                <div class="place"> <i></i>Новосибирск</div>
-                <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
-              </div>
-            </div>
-            <div class="event-item">
-              <div class="ei-head">
-                <div class="data"> <i> </i>2 Июня 12:30</div>
-                <div class="category-name">Категория мероприятия</div>
-              </div>
-              <h3>Заголовок размещенного мероприятия в несколько…</h3>
-              <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.</div>
-              <div class="ei-footer">
-                <div class="place"> <i></i>Новосибирск</div>
-                <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
-              </div>
-            </div>
-            <div class="event-item">
-              <div class="ei-head">
-                <div class="data"> <i> </i>2 Июня 12:30</div>
-                <div class="category-name">Категория мероприятия</div>
-              </div>
-              <h3>Заголовок размещенного мероприятия в несколько…</h3>
-              <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.</div>
+              <div class="description"> nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.</div>
               <div class="ei-footer">
                 <div class="place"> <i></i>Новосибирск</div>
                 <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
@@ -160,48 +149,48 @@
           </div>
           <div class="event-container-cabinet main-grid">
             <div class="news-item">
-              <h3>Заголовок размещенной новости в несколько строк</h3><img src="../images/1.jpg">
-              <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh…</div>
+              <h3>Заголовок размещенной новости в несколько строк Заголовок размещенной новости в несколько строк</h3><img src="../images/1.jpg">
+              <div class="description">Curabitur lobortis id lorem id bibendum. Ut iCurabitur lobortis id lorem id bibendum. Ut id consectetur magna. d consectetur magna. Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh…</div>
               <div class="ni-footer">
                 <div class="data"><i></i>12 Июня 16:30</div>
                 <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
               </div>
             </div>
             <div class="news-item">
-              <h3>Заголовок размещенной новости в несколько строк</h3><img src="../images/1.jpg">
-              <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh…</div>
+              <h3>Заголовок размещенной новости в несколько строк Заголовок размещенной новости в несколько строк</h3><img src="../images/1.jpg">
+              <div class="description">Curabitur lobortis id lorem id bibendum. Ut iCurabitur lobortis id lorem id bibendum. Ut id consectetur magna. d consectetur magna. Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh…</div>
               <div class="ni-footer">
                 <div class="data"><i></i>12 Июня 16:30</div>
                 <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
               </div>
             </div>
             <div class="news-item">
-              <h3>Заголовок размещенной новости в несколько строк</h3><img src="../images/1.jpg">
-              <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh…</div>
+              <h3>Заголовок размещенной новости в несколько строк Заголовок размещенной новости в несколько строк</h3><img src="../images/1.jpg">
+              <div class="description">Curabitur lobortis id lorem id bibendum. Ut iCurabitur lobortis id lorem id bibendum. Ut id consectetur magna. d consectetur magna. Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh…</div>
               <div class="ni-footer">
                 <div class="data"><i></i>12 Июня 16:30</div>
                 <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
               </div>
             </div>
             <div class="news-item">
-              <h3>Заголовок размещенной новости в несколько строк</h3><img src="../images/1.jpg">
-              <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh…</div>
+              <h3>Заголовок размещенной новости в несколько строк Заголовок размещенной новости в несколько строк</h3><img src="../images/1.jpg">
+              <div class="description">Curabitur lobortis id lorem id bibendum. Ut iCurabitur lobortis id lorem id bibendum. Ut id consectetur magna. d consectetur magna. Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh…</div>
               <div class="ni-footer">
                 <div class="data"><i></i>12 Июня 16:30</div>
                 <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
               </div>
             </div>
             <div class="news-item">
-              <h3>Заголовок размещенной новости в несколько строк</h3><img src="../images/1.jpg">
-              <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh…</div>
+              <h3>Заголовок размещенной новости в несколько строк Заголовок размещенной новости в несколько строк</h3><img src="../images/1.jpg">
+              <div class="description">Curabitur lobortis id lorem id bibendum. Ut iCurabitur lobortis id lorem id bibendum. Ut id consectetur magna. d consectetur magna. Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh…</div>
               <div class="ni-footer">
                 <div class="data"><i></i>12 Июня 16:30</div>
                 <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
               </div>
             </div>
             <div class="news-item">
-              <h3>Заголовок размещенной новости в несколько строк</h3><img src="../images/1.jpg">
-              <div class="description">Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh…</div>
+              <h3>Заголовок размещенной новости в несколько строк Заголовок размещенной новости в несколько строк</h3><img src="../images/1.jpg">
+              <div class="description">Curabitur lobortis id lorem id bibendum. Ut iCurabitur lobortis id lorem id bibendum. Ut id consectetur magna. d consectetur magna. Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh…</div>
               <div class="ni-footer">
                 <div class="data"><i></i>12 Июня 16:30</div>
                 <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
