--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,7 @@
       <script src="../js/jquery-3.3.1.min.js"></script>
       <script src="../js/jquery.parallaxify.js"></script>
       <script src="../js/jquery.mask.js"></script>
+      <script src="../js/clamp.js"></script>
       <script src="../js/slider.js"></script>
       <script src="../js/owl.carousel.js"></script>
       <script src="../js/control-style.js"></script>
