--- a/html/index.html
+++ b/html/index.html
@@ -125,7 +125,6 @@
       </div>
       <div class="section-phone">
         <div class="line-4"></div>
-        <div class="move-element triangle orange triangle-6" data-parallaxify-range-x="-50" data-parallaxify-range-y="-20"></div>
         <div class="move-element cube orange cube-8" data-parallaxify-range-x="-60" data-parallaxify-range-y="-10"></div>
         <div class="move-element cube orange cube-9" data-parallaxify-range-x="-40" data-parallaxify-range-y="-20"></div>
         <h2 class="global"><span>Надзаголовок</span>Надзаголовок в длинную строку</h2>
@@ -157,8 +156,34 @@
               <div class="category-name">Категория мероприятия</div>
             </div>
             <h3>Заголовок размещенного мероприятия в несколько…</h3>
-            <div class="description"> Curabitur lobortis id la. Quismet risus.
+            <div class="description">
+               Curabitur lobortis id la. Quismet risus.</div>
+            <div class="ei-footer">
+              <div class="place"> <i></i>Новосибирск</div>
+              <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
             </div>
+          </div>
+          <div class="event-item">
+            <div class="ei-head">
+              <div class="data"> <i> </i>2 Июня 12:30</div>
+              <div class="category-name">Категория мероприятия</div>
+            </div>
+            <h3>Заголовок разме</h3>
+            <div class="description">
+               Curabitur lobortis id la. Quismet risus. Curabitur lobortis id la. Quismet risus. Curabitur lobortis id la. Quismet risus. </div>
+            <div class="ei-footer">
+              <div class="place"> <i></i>Новосибирск</div>
+              <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
+            </div>
+          </div>
+          <div class="event-item">
+            <div class="ei-head">
+              <div class="data"> <i> </i>2 Июня 12:30</div>
+              <div class="category-name">Категория мероприятия</div>
+            </div>
+            <h3>Заголовок раз</h3>
+            <div class="description">
+               Curabitur lobortis id la.</div>
             <div class="ei-footer">
               <div class="place"> <i></i>Новосибирск</div>
               <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
@@ -170,8 +195,8 @@
               <div class="category-name">Категория мероприятия</div>
             </div>
             <h3>Заголовок размещенного мероприятия в несколько…</h3>
-            <div class="description"> Curabitur lobortis id lorem id bibendum. Ut id consectet
-            </div>
+            <div class="description">
+               Curabitur lobortis </div>
             <div class="ei-footer">
               <div class="place"> <i></i>Новосибирск</div>
               <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
@@ -183,8 +208,8 @@
               <div class="category-name">Категория мероприятия</div>
             </div>
             <h3>Заголовок размещенного мероприятия в несколько…</h3>
-            <div class="description"> Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
-            </div>
+            <div class="description">
+               Curabitur lobortis id la. Quismet risus. Curabitur lobortis id la. Quismet risus. Curabitur lobortis id la. Quismet risus. </div>
             <div class="ei-footer">
               <div class="place"> <i></i>Новосибирск</div>
               <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
@@ -196,8 +221,8 @@
               <div class="category-name">Категория мероприятия</div>
             </div>
             <h3>Заголовок размещенного мероприятия в несколько…</h3>
-            <div class="description"> Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
-            </div>
+            <div class="description">
+               Curabitur lobortis id</div>
             <div class="ei-footer">
               <div class="place"> <i></i>Новосибирск</div>
               <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
@@ -209,8 +234,8 @@
               <div class="category-name">Категория мероприятия</div>
             </div>
             <h3>Заголовок размещенного мероприятия в несколько…</h3>
-            <div class="description"> Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
-            </div>
+            <div class="description">
+               Curabitur lobortis id la. Quismet risus. Curabitur lobortis id la. Quismet risus. Curabitur lobortis id la. Quismet risus. </div>
             <div class="ei-footer">
               <div class="place"> <i></i>Новосибирск</div>
               <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
@@ -222,21 +247,8 @@
               <div class="category-name">Категория мероприятия</div>
             </div>
             <h3>Заголовок размещенного мероприятия в несколько…</h3>
-            <div class="description"> Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
-            </div>
-            <div class="ei-footer">
-              <div class="place"> <i></i>Новосибирск</div>
-              <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
-            </div>
-          </div>
-          <div class="event-item">
-            <div class="ei-head">
-              <div class="data"> <i> </i>2 Июня 12:30</div>
-              <div class="category-name">Категория мероприятия</div>
-            </div>
-            <h3>Заголовок размещенного мероприятия в несколько…</h3>
-            <div class="description"> Curabitur lobortis id lorem id bibendum. Ut id consectetur magna. Quisque volutpat augue enim, pulvinar lobortis nibh lacinia at. Vestibulum nec erat ut mi sollicitudin porttitor id sit amet risus.
-            </div>
+            <div class="description">
+               Curabitur lobortis id la. Quismet risus. Curabitur lobortis id la. Quismet risus. Curabitur lobortis id la. Quismet risus. </div>
             <div class="ei-footer">
               <div class="place"> <i></i>Новосибирск</div>
               <div class="btn-wc"><a class="btn orange-border small" href="#">Подробнее</a></div>
@@ -363,7 +375,7 @@
         <div class="section-partners">
           <h2 class="global"><span>Надзаголовок</span>Возможности для организаторов</h2>
           <div class="main-grid">
-            <div class="slider owl-carousel slider-owl">
+            <div class="slider owl-carousel slider-owl owl-page">
               <div class="item">
                 <h3>Структурированное представление мероприятий</h3>
                 <div class="text">Это платформа для организаторов и людей которым интересны мастер классы, обучение, мероприятия. Наш сервис помогает решить задачу для пользователей. И людей мастер классы, обучение, мероприятия. Наш сервис помогает решить задачу для пользователей. и людей которым интересны мастер классы, обучение, мероприятия. Наш сервис помогает решить задачу для пользователей.</div>
